[tool.poetry]
name = "at-krl"
version = "0.1.0"
description = ""
authors = ["grigadnal625 <grigandal625@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
antlr4-python3-runtime = "^4.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
